Use a media query to fix buttons on mobile

--- a/dark_rainbow.css
+++ b/dark_rainbow.css
@@ -14,3 +14,9 @@ button, button:disabled,
     -webkit-background-clip: text !important;
     caret-color: white;
 }
+
+@media only screen and (max-width: 750px){
+    button{
+        color: white !important;
+    }
+}
